# Dwarfs4MOSAIC-Web

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
SRC/dwarfs4MOSAIC/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
SRC/dwarfs4MOSAIC/migrations/: 0001_initial.py  0002_tbl_observatory_location_alter_tbl_instrument_name_and_more.py  0003_tbl_observatory_coordinates.py  0005_tbl_observatory_altitude_and_more.py  0007_tbl_telescope_website.py  0011_tbl_instrument_fullname_tbl_instrument_status_and_more.py
SRC/galaxy/: urls.py  views.py
SRC/website/: settings.py  urls.py
src/: manage.py
src/dwarfs4MOSAIC/: admin.py  apps.py  constants.py  forms.py  models.py  platform_info.html  signals.py  urls.py  utils.py  validators.py  views.py
src/dwarfs4MOSAIC/admin/: __init__.py  admin_group.py  admin_instrument.py  admin_observatory.py  admin_observing_block.py  admin_observing_run.py  admin_researcher.py  admin_target.py  admin_telescope.py  admin_user.py  helpers.py
src/dwarfs4MOSAIC/forms/: __init__.py  form_group.py  form_import_csv.py  form_instrument.py  form_observatory.py  form_observing_block.py  form_observing_run.py  form_platform.py  form_researcher.py  form_target.py  form_telescope.py
src/dwarfs4MOSAIC/migrations/: 0004_remove_tbl_observatory_coordinates_and_more.py  0006_tbl_observatory_website_and_more.py  0009_alter_tbl_telescope_owner.py  (+53 more)
src/dwarfs4MOSAIC_website/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py  version.py  wsgi.py
src/media/: .gitkeep
src/website/: urls.py
(+79 files in other folders)
