[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwarfs4mosaic"
version = "0.1.0"
description = "A web project for MOSAIC at ELT."
readme = "README.md"
requires-python = ">=3.13.1"
license = { file = "LICENSE.txt" }
authors = [{ name = "Noelia Grande", email = "nogrande@ucm.es" }]
dependencies = [
    "django>=5.1.5",
    "djangorestframework",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/noeliagrande/Dwarfs4MOSAIC-Web"
Repository = "https://github.com/noeliagrande/Dwarfs4MOSAIC-Web.git"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "dwarfs4MOSAIC",
    "website"
    ]
include-package-data = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"